api/manifests/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: api
# spec:
#   type: ClusterIP
#   clusterIP: 172.16.8.35
#   selector:
#     app: api
#   ports:
#   - port: 80
#     targetPort: 80

apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  type: LoadBalancer 
  selector:
    app: api
  ports:
  - port: 80 
    targetPort: 8080
