api/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress2
spec:
  # defaultBackend:
  #   service:
  #     name: api-loadbalancer
  #     port:
  #       number: 80
  rules:
    - http:
       paths:
         - path: /api/vote
           pathType: ImplementationSpecific
           backend:
            service:
              name: api-loadbalancer
              port:
                number: 80
